--- a/KartRace/index.html
+++ b/KartRace/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=800 height=600 tabindex="-1"></canvas>
+      <canvas id="unity-canvas" width=240 height=135 tabindex="-1"></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Builds.loader.js";
+      var loaderUrl = buildUrl + "/KartRace.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/Builds.data",
-        frameworkUrl: buildUrl + "/Builds.framework.js",
-        codeUrl: buildUrl + "/Builds.wasm",
+        dataUrl: buildUrl + "/KartRace.data",
+        frameworkUrl: buildUrl + "/KartRace.framework.js",
+        codeUrl: buildUrl + "/KartRace.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Race",
@@ -98,8 +98,8 @@
 
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
-        canvas.style.width = "800px";
-        canvas.style.height = "600px";
+        canvas.style.width = "240px";
+        canvas.style.height = "135px";
       }
 
       document.querySelector("#unity-loading-bar").style.display = "block";
